src/snapshots/tuzuku__insta___test_function_call_initial_code_chunk_print.snap
---
source: src/insta.rs
assertion_line: 29
expression: "String::from_utf8_lossy(&chunk_print)"
---
==== test_function_call_initial_code ====
 offset | line | opcode           | constants
 000000 | 0002 | OP_CONSTANT      | <function greet>
 000002 | 0002 | OP_SET_GLOBAL    | greet
 000004 | 0007 | OP_GET_GLOBAL    | greet
 000006 | 0007 | OP_CONSTANT      | John Doe
 000008 | 0007 | OP_CALL          | 1
 000010 | 0007 | OP_POP           |

